
** Inline functions.
Added inline function support.

** Function arguments.
Added register and variadic function argument support (independently).

** Typedef declarations.
Added typedef declarations (independently).

** C++ member functions.
Added final, friend, const, override, volatile, virtual, and pure virtual C++
member function declaration support.

** C++11 features.
Added C++11 auto, constexpr, enum class, mutable, and rvalue references.

** Optional returning.
In pseudo-English for functions, the "returning" clause is now optional and
equivalent to returning void.

** Number bases.
Binary, octal, and hexadecimal numbers can now be used for array sizes.

** Better warning an error messages.
Warning and error messages are now better, complete with location information
and color.

** Comments.
C /*...*/ and C++ // comments are now ignored.

** No cdecl reserved words in C declarations.
Reserved words that are part of cdecl's pseudo-English are no longer considered
such when explaining C or C++ declarations.

* Revamped manual page.
The cdecl(1) manual page has been revamped.


* Changes in Cdecl 2.5-blocks

** Blocks syntax.
Added support for Apple's "blocks" syntax per N1370 "Apple’s Extensions to C"
<http://www.open-std.org/jtc1/sc22/wg14/www/docs/n1370.pdf>.


* Changes in Cdecl 2.5

** GNU readline.
Now using GNU readline (when available) for command-line editing.

** Prompt/Noprompt commands.
New "prompt" and "noprompt" commands are available.


* Changes by Tony Hansen

** Improved grammar.
More parts can be missing during explanations.

** Variadic arguments.
Functions can now accept a variadic argument.


* Changes by Alexander Dupuy

** Additional K&R C checks.
Now warns about use of signed or void in K&R C.

** Better C++ reference support.
Better semantic checking on C++ references is now done.

** Const/volatile.
Const and volatile function pointers are now supported.


* Changes by Merlyn LeRoy

** Extern, register, and static.