@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3cdecl\fP 1 "April 19, 2017" "PJL TOOLS"
+.TH \f3cdecl\fP 1 "April 21, 2017" "PJL TOOLS"
 .SH NAME
 cdecl, c++decl \- compose and decipher C & C++ declarations and casts
 .SH SYNOPSIS
@@ -437,6 +437,7 @@ Adds support for
 \f(CWenum class\fP,
 rvalue references,
 \f(CWthread_local\fP,
+the function trailing return-type syntax,
 and
 \f(CWfinal\fP
 and
@@ -1061,6 +1062,12 @@ since
 and all such references
 .I must
 be initialized.
+.IP \n+[step].
+While
+.B explain
+supports the function trailing return-type syntax,
+.B declare
+always prints in the traditional syntax.
 .SH AUTHORS
 .B cdecl
 has been around since the mid-1980s
