@@ -1,0 +1,1 @@
+declare f as function returning pointer to void
