@@ -1,0 +1,1 @@
+cdecl | -xc++ | explain auto f() -> void* | 0
