@@ -1,0 +1,1 @@
+cdecl | -xc++03 | explain auto f() -> void | 65
