@@ -1,0 +1,1 @@
+cdecl | -xc++ | explain void f() -> void | 65
